--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["confirmpassword", "webp", "Yourtraveldottv"]
+  "cSpell.words": ["confirmpassword", "uploadphoto", "webp", "Yourtraveldottv"]
 }
