--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["confirmpassword", "uploadphoto", "webp", "Yourtraveldottv"]
+  "cSpell.words": [
+    "confirmpassword",
+    "unsub",
+    "uploadphoto",
+    "webp",
+    "Yourtraveldottv"
+  ]
 }
